Выпускной проект - внесены исправления в соответствии с замечаниями