@@ -3,16 +3,18 @@ package com.github.alexandervmalysh.graduation.bookshelf;
 import java.time.Year;
 
 public class Book {
+    private static final Year MIN_YEAR = Year.of(1800);
+
     private final String author;
     private final String title;
     private final Year year;
 
     public Book(String author, String title, Year year) {
-        if (author == null || author.trim().isEmpty()) {
+        if (author == null || author.isBlank()) {
             throw new IllegalArgumentException("Ошибка: автор не может быть пустым");
         }
 
-        if (title == null || title.trim().isEmpty()) {
+        if (title == null || title.isBlank()) {
             throw new IllegalArgumentException("Ошибка: название не может быть пустым");
         }
 
@@ -20,8 +22,11 @@ public class Book {
             throw new IllegalArgumentException("Ошибка: год не может быть пустым");
         }
 
-        if (year.getValue() < 1800 || year.getValue() > Year.now().getValue()) {
-            throw new IllegalArgumentException("Ошибка: год издания должен быть между 1800 и текущим");
+        Year now = Year.now();
+
+        if (year.isBefore(MIN_YEAR) || year.isAfter(now)) {
+            throw new IllegalArgumentException("Ошибка: год издания должен быть между " + MIN_YEAR +
+                    " и текущим");
         }
 
         this.author = author;
@@ -29,22 +34,12 @@ public class Book {
         this.year = year;
     }
 
-    @SuppressWarnings("unused")
-    public String getAuthor() {
-        return author;
-    }
-
     public String getTitle() {
         return title;
     }
 
-    @SuppressWarnings("unused")
-    public Year getYear() {
-        return year;
-    }
-
     @Override
     public String toString() {
-        return (author + ", " + title + ", " + year.getValue());
+        return (author + ", " + title + ", " + year);
     }
 }
